--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 <h2>
 <a id="what-is-cxr" class="anchor" href="#what-is-cxr" aria-hidden="true"><span class="octicon octicon-link"></span></a>¿What is CXR?</h2>
 
-<p>CXR (CarbonXtreme) is a more optimized Android ROM based on CM, AOSP and a little touch of PAC- ROM.</p>
+<p>CXR (CarbonXtremeROM) is a more optimized Android ROM based on CM, AOSP and a little touch of PAC- ROM.</p>
 
 <h2>
 <a id="history-of-cxr" class="anchor" href="#history-of-cxr" aria-hidden="true"><span class="octicon octicon-link"></span></a>History of CXR</h2>
 
 <p>CXR born how a free project between 4 guys interested in Android, we are a small group of guys, with basic knowledge of Android, currently still working to bring a new ROM to the world of Android, bringing more stability, support those devices that do not have with support from other developers</p>
 
-<p>We had our first supported devices, Galaxy Ace i (cooperve) Galaxy Ace (cooper), etc. We currently have over current devices, Moto E, G Moto, Moto G 2014, S3, etc...</p>
+<p>We had our first supported devices, Galaxy Ace i (cooperve) Galaxy Ace (cooper), etc. We currently have over current devices, Moto E, Moto G 2013, Moto X 2013, Moto G 2014, S3, etc...</p>
 
 <h2>
 <a id="supported-devices" class="anchor" href="#supported-devices" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported devices</h2>
