--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>TeamCarbonXtreme by TeamCarbonXtremeARMv7</title>
+    <title>TeamCarbonXtremeROM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -14,8 +14,6 @@
       <h1 class="project-name">TeamCarbonXtreme</h1>
       <h2 class="project-tagline">¡Welcome!</h2>
       <a href="https://github.com/TeamCarbonXtremeARMv7/web.page" class="btn">View on GitHub</a>
-      <a href="https://github.com/TeamCarbonXtremeARMv7/web.page/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/TeamCarbonXtremeARMv7/web.page/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -100,7 +98,7 @@
 <a id="and-especially-you-for-making-all-this-possible" class="anchor" href="#and-especially-you-for-making-all-this-possible" aria-hidden="true"><span class="octicon octicon-link"></span></a>And especially you, for making all this possible.</h2>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/TeamCarbonXtremeARMv7/web.page">TeamCarbonXtreme</a> is maintained by <a href="https://github.com/TeamCarbonXtremeARMv7">TeamCarbonXtremeARMv7</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/TeamCarbonXtremeARMv7/web.page">TeamCarbonXtreme</a> is maintained by <a href="https://github.com/Nothing-Dev>Nothing-Dev</a>.</span>
       </footer>
 
     </section>
