--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <a id="and-especially-you-for-making-all-this-possible" class="anchor" href="#and-especially-you-for-making-all-this-possible" aria-hidden="true"><span class="octicon octicon-link"></span></a>And especially you, for making all this possible.</h2>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/TeamCarbonXtremeARMv7/web.page">TeamCarbonXtreme</a> is maintained by <a href="https://github.com/Nothing-Dev>Nothing-Dev</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/TeamCarbonXtremeARMv7/web.page">TeamCarbonXtreme</a> is maintained by <a href="https://github.com/Nothing-Dev>Nothing-Dev"></a>.</span>
       </footer>
 
     </section>
